[project]
name = "greentechhub-core"
version = "0.1.0"
description = "Framework-independent foundation (config, logging, identity, permissions, and more) for the GreenTechHub ecosystem"
requires-python = ">=3.12"
dependencies = ["pydantic-settings>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greentechhub_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
